--- a/css/player.scss
+++ b/css/player.scss
@@ -7,8 +7,9 @@ $tape-color: #a52a2a;
   border-radius: 4px;
   display: inline-block;
   height: 10px;
+  margin-left: 6px;
   position: relative;
-  text-align: center;
+  vertical-align: middle;
   width: 100px;
 }
 
